--- a/Jupyter Notebooks/VacationPy.ipynb
+++ b/Jupyter Notebooks/VacationPy.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VacationPy\n",
-    "----\n",
-    "\n",
-    "#### Note\n",
-    "* Keep an eye on your API usage. Use https://developers.google.com/maps/reporting/gmp-reporting as reference for how to monitor your usage and billing.\n",
-    "\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+    "# VacationPy\n"
    ]
   },
   {
@@ -198,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03b96406d6e549f29690ec43c7bf06a0",
+       "model_id": "fc58534d5efd4669b9ea3b8f83f96059",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,7 +536,19 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-93000e82840e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[0mresponse\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m     \u001b[0mhotel_names\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'results'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[0mhotel_lat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'results'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'geometry'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'location'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'lat'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "#find hotels with places api\n",
     "\n",
@@ -579,334 +585,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-7-c27f6a907ee4>:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotel_df['Hotel Name']= hotel_names\n",
-      "<ipython-input-7-c27f6a907ee4>:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotel_df['Hotel Lat']= hotel_lat\n",
-      "<ipython-input-7-c27f6a907ee4>:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hotel_df['Hotel Lng']= hotel_lng\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Windspeed</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Hotel Name</th>\n",
-       "      <th>Hotel Lat</th>\n",
-       "      <th>Hotel Lng</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Parsons</td>\n",
-       "      <td>72.84</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.07</td>\n",
-       "      <td>37.3403</td>\n",
-       "      <td>-95.2611</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1634513516</td>\n",
-       "      <td>Parsons Inn</td>\n",
-       "      <td>37.340958</td>\n",
-       "      <td>-95.235885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>Ruwi</td>\n",
-       "      <td>76.69</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>23.5996</td>\n",
-       "      <td>58.5507</td>\n",
-       "      <td>OM</td>\n",
-       "      <td>1634513557</td>\n",
-       "      <td>Park Inn by Radisson Muscat</td>\n",
-       "      <td>23.594386</td>\n",
-       "      <td>58.413386</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>61</td>\n",
-       "      <td>Valparaíso</td>\n",
-       "      <td>65.84</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.61</td>\n",
-       "      <td>-33.0393</td>\n",
-       "      <td>-71.6273</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>1634513455</td>\n",
-       "      <td>Hotel Ultramar</td>\n",
-       "      <td>-33.048796</td>\n",
-       "      <td>-71.632399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>206</th>\n",
-       "      <td>206</td>\n",
-       "      <td>Jalu</td>\n",
-       "      <td>68.40</td>\n",
-       "      <td>44</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.38</td>\n",
-       "      <td>29.0331</td>\n",
-       "      <td>21.5482</td>\n",
-       "      <td>LY</td>\n",
-       "      <td>1634513994</td>\n",
-       "      <td>صاحبة الفخامة</td>\n",
-       "      <td>29.032355</td>\n",
-       "      <td>21.549665</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>287</th>\n",
-       "      <td>287</td>\n",
-       "      <td>Marsá Maţrūḩ</td>\n",
-       "      <td>66.40</td>\n",
-       "      <td>77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.44</td>\n",
-       "      <td>31.3525</td>\n",
-       "      <td>27.2453</td>\n",
-       "      <td>EG</td>\n",
-       "      <td>1634514202</td>\n",
-       "      <td>Carols Beau Rivage Hotel - فندق كارولز بوريفاج</td>\n",
-       "      <td>31.393093</td>\n",
-       "      <td>27.064449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>366</th>\n",
-       "      <td>366</td>\n",
-       "      <td>Saint-Pierre</td>\n",
-       "      <td>67.91</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.61</td>\n",
-       "      <td>-21.3393</td>\n",
-       "      <td>55.4781</td>\n",
-       "      <td>RE</td>\n",
-       "      <td>1634514399</td>\n",
-       "      <td>Hôtel Le chenets</td>\n",
-       "      <td>-21.135848</td>\n",
-       "      <td>55.479259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396</th>\n",
-       "      <td>396</td>\n",
-       "      <td>Angoche</td>\n",
-       "      <td>75.36</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11.18</td>\n",
-       "      <td>-16.2325</td>\n",
-       "      <td>39.9086</td>\n",
-       "      <td>MZ</td>\n",
-       "      <td>1634514474</td>\n",
-       "      <td>Guest House HESADA</td>\n",
-       "      <td>-16.225924</td>\n",
-       "      <td>39.905828</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>410</th>\n",
-       "      <td>410</td>\n",
-       "      <td>Aswān</td>\n",
-       "      <td>81.70</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12.66</td>\n",
-       "      <td>24.0934</td>\n",
-       "      <td>32.9070</td>\n",
-       "      <td>EG</td>\n",
-       "      <td>1634514489</td>\n",
-       "      <td>Nuba Nile</td>\n",
-       "      <td>24.100818</td>\n",
-       "      <td>32.901494</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>494</th>\n",
-       "      <td>494</td>\n",
-       "      <td>Eilat</td>\n",
-       "      <td>73.24</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18.41</td>\n",
-       "      <td>29.5581</td>\n",
-       "      <td>34.9482</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>1634514719</td>\n",
-       "      <td>Club Hotel Eilat</td>\n",
-       "      <td>29.549450</td>\n",
-       "      <td>34.952215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>522</th>\n",
-       "      <td>522</td>\n",
-       "      <td>Quelimane</td>\n",
-       "      <td>77.92</td>\n",
-       "      <td>69</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>-17.8786</td>\n",
-       "      <td>36.8883</td>\n",
-       "      <td>MZ</td>\n",
-       "      <td>1634514789</td>\n",
-       "      <td>Hotel Flamingo</td>\n",
-       "      <td>-17.880454</td>\n",
-       "      <td>36.887034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>544</th>\n",
-       "      <td>544</td>\n",
-       "      <td>Neuquén</td>\n",
-       "      <td>66.09</td>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.44</td>\n",
-       "      <td>-38.9516</td>\n",
-       "      <td>-68.0591</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>1634514557</td>\n",
-       "      <td>Hotel del Comahue</td>\n",
-       "      <td>-38.951079</td>\n",
-       "      <td>-68.058805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>546</th>\n",
-       "      <td>546</td>\n",
-       "      <td>Santa Lucía</td>\n",
-       "      <td>69.53</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.91</td>\n",
-       "      <td>27.9117</td>\n",
-       "      <td>-15.5407</td>\n",
-       "      <td>ES</td>\n",
-       "      <td>1634514853</td>\n",
-       "      <td>Santa Mónica Suites Hotel</td>\n",
-       "      <td>27.750938</td>\n",
-       "      <td>-15.572490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>552</th>\n",
-       "      <td>552</td>\n",
-       "      <td>Beloha</td>\n",
-       "      <td>69.46</td>\n",
-       "      <td>92</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>-25.1667</td>\n",
-       "      <td>45.0500</td>\n",
-       "      <td>MG</td>\n",
-       "      <td>1634514867</td>\n",
-       "      <td>Marokala Ouest</td>\n",
-       "      <td>-25.379918</td>\n",
-       "      <td>45.397850</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Unnamed: 0          City   Temp  Humidity  Cloudiness  Windspeed  \\\n",
-       "12           12       Parsons  72.84        50           0      10.07   \n",
-       "28           28          Ruwi  76.69        49           0       1.14   \n",
-       "61           61    Valparaíso  65.84        45           0       4.61   \n",
-       "206         206          Jalu  68.40        44           0       7.38   \n",
-       "287         287  Marsá Maţrūḩ  66.40        77           0       3.44   \n",
-       "366         366  Saint-Pierre  67.91        71           0       4.61   \n",
-       "396         396       Angoche  75.36        80           0      11.18   \n",
-       "410         410         Aswān  81.70        19           0      12.66   \n",
-       "494         494         Eilat  73.24        64           0      18.41   \n",
-       "522         522     Quelimane  77.92        69           0      10.00   \n",
-       "544         544       Neuquén  66.09        37           0       3.44   \n",
-       "546         546   Santa Lucía  69.53        39           0       6.91   \n",
-       "552         552        Beloha  69.46        92           0       4.27   \n",
-       "\n",
-       "         Lat      Lng Country        Date  \\\n",
-       "12   37.3403 -95.2611      US  1634513516   \n",
-       "28   23.5996  58.5507      OM  1634513557   \n",
-       "61  -33.0393 -71.6273      CL  1634513455   \n",
-       "206  29.0331  21.5482      LY  1634513994   \n",
-       "287  31.3525  27.2453      EG  1634514202   \n",
-       "366 -21.3393  55.4781      RE  1634514399   \n",
-       "396 -16.2325  39.9086      MZ  1634514474   \n",
-       "410  24.0934  32.9070      EG  1634514489   \n",
-       "494  29.5581  34.9482      IL  1634514719   \n",
-       "522 -17.8786  36.8883      MZ  1634514789   \n",
-       "544 -38.9516 -68.0591      AR  1634514557   \n",
-       "546  27.9117 -15.5407      ES  1634514853   \n",
-       "552 -25.1667  45.0500      MG  1634514867   \n",
-       "\n",
-       "                                         Hotel Name  Hotel Lat  Hotel Lng  \n",
-       "12                                      Parsons Inn  37.340958 -95.235885  \n",
-       "28                      Park Inn by Radisson Muscat  23.594386  58.413386  \n",
-       "61                                   Hotel Ultramar -33.048796 -71.632399  \n",
-       "206                                   صاحبة الفخامة  29.032355  21.549665  \n",
-       "287  Carols Beau Rivage Hotel - فندق كارولز بوريفاج  31.393093  27.064449  \n",
-       "366                                Hôtel Le chenets -21.135848  55.479259  \n",
-       "396                              Guest House HESADA -16.225924  39.905828  \n",
-       "410                                       Nuba Nile  24.100818  32.901494  \n",
-       "494                                Club Hotel Eilat  29.549450  34.952215  \n",
-       "522                                  Hotel Flamingo -17.880454  36.887034  \n",
-       "544                               Hotel del Comahue -38.951079 -68.058805  \n",
-       "546                       Santa Mónica Suites Hotel  27.750938 -15.572490  \n",
-       "552                                  Marokala Ouest -25.379918  45.397850  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#add hotel names, lat's and lng's to hotel_df\n",
     "\n",
@@ -920,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,24 +620,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03b96406d6e549f29690ec43c7bf06a0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(border='1px solid black', height='700px', padding='3px', width='1050px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add marker layer ontop of heat map\n",
     "\n",
